welcome.lessons.welcome.summative.Moria.scala.code
var fin:Boolean = false

while(!fin)
{
  droite()
  droite()
  avance()
 
  while(!estSurBiscuit())&&(!fin)
  {
    avance()
    
    if(estFaceMur())
    {
      fin = true
    }
  }
  
  prendBiscuit()
  
  gauche()
  gauche()
  
  while(!estSurBiscuit())
  {
    avance()
  }
  
  recule()
  poseBiscuit()
}

droite()
droite()

while(!estFaceMur())
{
   avance()
}

droite()
avance()
gauche()
avance()
